--- a/front-end/reddit-clone/package.json
+++ b/front-end/reddit-clone/package.json
@@ -22,13 +22,14 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@auth0/angular-jwt": "^5.0.1",
     "ngx-webstorage": "^6.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
     "@angular/language-service": "~10.1.3",
